--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,10 @@
 @media only screen and (min-width: 600px) {
 	body{
-		margin: center;
-		width: 100%;
+		margin: auto;
+		width: 60%;
 	}
 	
 	.content{
-		font-family: cursive;
 		display: grid;
 		grid-gap: 1rem;
 		/* this makes a 3 column layout, you may choose any number > 1 */
@@ -18,10 +17,15 @@
 }
 
 body{
-            background-color: black;
+    background-color: black;
 
 }
     img{
         width: 300;
         height: 300;
+    }
+
+    p{ 
+        color: aqua;
+        font-family: serif;
     }
